# rate-limit-planner

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/rate_limit_planner/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_rate_limit_planner.py
